--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,8 @@ section h5,p,li {
 .main .bottom-promote {
   padding: 20px 0;
   /*height: 125px;*/
-  background: url(../img/bottom.jpg);
+  background: url(../img/bottom.png);
+  background-size: cover;
   text-align: center;
   color: #fff;
   font-size: 24px;
