--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ section h5,p,li {
 }
 
 /*bottom-promote*/
-.main .bottom-promote {
+.bottom-promote {
   padding: 20px 0;
   /*height: 125px;*/
   background: url(../img/bottom.png);
@@ -49,10 +49,10 @@ section h5,p,li {
   color: #fff;
   font-size: 24px;
 }
-.main .bottom-promote h1 {
+.bottom-promote h1 {
   padding: 10px;
 }
-.main .bottom-promote button {
+.bottom-promote button {
   font-size: 16px;
   width: 100px;
   height: 27px;
