--- a/css/reset.css
+++ b/css/reset.css
@@ -105,7 +105,9 @@ input, select, img {
 }
 
 .clearfix:after{content:".";display:block;height:0;clear:both;visibility:hidden;} 
-
+.clear{
+  clear: both;
+}
 .fl {
     float: left;
 }
