--- a/css/footer.css
+++ b/css/footer.css
@@ -25,6 +25,7 @@
   width: 30px;
   height: 30px;
   background: url(../img/spirit.png);
+  background-size: cover ;
   margin-right: 7.5px;
 }
 .attention span:nth-child(2) {
