--- a/css/aboutIndex.css
+++ b/css/aboutIndex.css
@@ -25,6 +25,7 @@
   width: 105px;
   height: 115px;
   background: url(../img/spirit1.png);
+  background-size: cover ;
   margin: auto;
 }
 .content3 .col-md-6:nth-of-type(2) .icon{
