--- a/css/productSmb.css
+++ b/css/productSmb.css
@@ -1,6 +1,6 @@
 .content3 {
   height: 820px;
-  background: url(../img/product-bg3.jpg);
+  background: url(../img/product-smb7.jpg);
   background-size: cover;
 }
 .content3 p {
