--- a/css/solution.css
+++ b/css/solution.css
@@ -18,3 +18,27 @@
 .main .content-nav, .main .content-con{
   padding:40px 200px;
 }
+.main .size {
+  padding-bottom: 100px;
+}
+.main .size .table{
+  margin-top: 90px;
+}
+.main .size .table thead{
+  font-weight: bold;
+}
+.main .size .table tr, .main .size .table td {
+  border: 0px;
+  text-align: center;
+  height: 60px;
+}
+
+
+
+
+
+
+
+
+
+
