--- a/css/reset.css
+++ b/css/reset.css
@@ -22,12 +22,15 @@ time, mark, audio, video {
     border:0;
     outline:0;
     font-size:100%;
+    font-weight: lighter;
     vertical-align:baseline;
     background:transparent;
 }
 
 body {
-    line-height:1;
+  font-family: 'Source Han Sans', 'Avenir', Helvetica, Arial, 'STHeiti', 'Microsoft Yahei', sans-serif, 'Simsun';
+  font-weight: lighter;
+  line-height:1;
 }
 
 :focus {
