--- a/css/main.css
+++ b/css/main.css
@@ -75,15 +75,27 @@ section h5,p,li {
 .main .case-content{
   padding: 45px 0;
 }
-
-.main .case-content .case-active{
-  width: 100%;
-  height: 100%;
-  transition: all 1s;
+.main .case-content p{
+  text-align: center;
 }
-.main .case-content div:hover{
-  background: green;  
+.main .case-content .case-active{
+  width: 89.5%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.main .case-content .case-active, .main .case-content p{
+  transition: all 0.4s;  
+}
+.main .case-content div:hover .case-active{
+  background: rgba(255, 0, 0, 0.5);
+}
+.main .case-content div:hover p{
+  /* color: #fff; */
 }
 .main .case-content>div img {
+  width: 100%;
   height: 160px;
 }
