产品页效果调整

--- a/css/productEnterprise.css
+++ b/css/productEnterprise.css
@@ -23,15 +23,13 @@
   top: 435px;
   right: 0px;
 }
-
 .content3 {
   height: 686px;
-  background: url(../img/product-Enterprise-bg.jpg) no-repeat;
-  background-size: cover;
+  background:#0e172a url(../img/product-Enterprise-bg.jpg) no-repeat bottom center;
 }
 .content4 {
   height: 800px;
-  background: url(../img/product-bg2.jpg);  
+  background: #dcdffd url(../img/product-bg2.jpg) no-repeat;    
 }
 .content3, .content4 {
   padding:0 270px;
@@ -42,7 +40,7 @@
 }
 
 .product-title, .product-other-title{
-  padding: 80px 0;
+  padding: 100px 0;
 }
 
 .main .content-title {
