--- a/css/solution.css
+++ b/css/solution.css
@@ -2,8 +2,9 @@
   width: 100%;
 }
 .main .content1 {
-  background: url(../img/solution-banner.jpg);
+  background: url(../img/solution-banner.jpg) no-repeat;
   background-position: center;
+  background-size: cover;
   line-height: 500px;
   text-align: center;
   font-size: 48px;
