--- a/css/productAreas.css
+++ b/css/productAreas.css
@@ -29,11 +29,11 @@
 }
 .content3 {
   height: 820px;
-  background: url(../img/product-bg1.jpg);
+  background: url(../img/product-bg1.jpg) no-repeat;
 }
 .content4 {
   height: 800px;
-  background: url(../img/product-bg2.jpg);  
+  background: #dcdffd url(../img/product-bg2.jpg) no-repeat;  
 }
 .content3, .content4 {
   padding:0 270px;
@@ -44,7 +44,7 @@
 }
 
 .product-title, .product-other-title{
-  padding: 80px 0;
+  padding: 100px 0;
 }
 
 .main .content-title {
