--- a/css/productNetcafe.css
+++ b/css/productNetcafe.css
@@ -1,4 +1,4 @@
 .content3 {
   height: 750px;
-  background: url(../img/product-netcafe-bg1.jpg) 100% 100%;
+  background:#532c85 url(../img/product-netcafe-bg1.jpg) no-repeat center center;
 }
