--- a/css/productAreas.css
+++ b/css/productAreas.css
@@ -29,7 +29,7 @@
 }
 .content3 {
   height: 820px;
-  background: url(../img/product-bg1.jpg) no-repeat;
+  background:#000964 url(../img/product-bg1.jpg) no-repeat;
 }
 .content4 {
   height: 800px;
