--- a/css/main.css
+++ b/css/main.css
@@ -60,9 +60,14 @@ section h5,p,li {
   margin-top: 80px;
 }
 
+
 /*case*/
 .main .case {
   padding: 65px 80px;
+}
+
+.main .case .content-title, .news .content-title {
+  text-align: left;
 }
 .main .case li a {
   color: #333;
@@ -75,27 +80,42 @@ section h5,p,li {
 .main .case-content{
   padding: 45px 0;
 }
-.main .case-content p{
+.main .case-content>li{
+  margin: 5px;
+  padding: 5px;
+  width: 270px;
+  float: left;
+  background: #fff;
+  transition: all .3s;
+  box-shadow: 0 0 10px rgba(0,0,0,0.4);
+  overflow: hidden;
+}
+.main .case-content>li a{
+  text-decoration: none!important;
+}
+.main .case-content>li h2{
+  height: 70px;
+  line-height: 70px;
+  font-size: 16px;
+  color: #333;
   text-align: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
-.main .case-content .case-active{
-  width: 89.5%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-}
-.main .case-content .case-active, .main .case-content p{
-  transition: all 0.4s;  
-}
-.main .case-content div:hover .case-active{
-  background: rgba(255, 0, 0, 0.5);
-}
-.main .case-content div:hover p{
-  /* color: #fff; */
-}
-.main .case-content>div img {
+.main .case-content>li img {
   width: 100%;
   height: 160px;
+}
+.main .case-content>li img:hover {
+  transform: scale(1.02);
+}
+.main .case-content>li span {
+  font-size: 14px;
+  line-height: 1.8;
+  padding: 4px 20px;
+  background: #ea042b;
+  color: #fff;
+  display: inline-block;
+  margin: 20px 0 20px 25px;
 }
