--- a/css/main.css
+++ b/css/main.css
@@ -123,6 +123,7 @@ section h5,p,li {
   text-align: center;
 }
 .main .case-content>li img {
+  width: 100%;
   height: 160px;
 }
 .main .case-content>li img:hover {
