--- a/css/aboutClient.css
+++ b/css/aboutClient.css
@@ -8,3 +8,8 @@
 .main section:nth-last-child(1) {
   padding-bottom: 150px;
 }
+
+.tabActive{
+  color: red !important;
+  border-bottom: 1px solid red;
+}
