--- a/css/main.css
+++ b/css/main.css
@@ -69,21 +69,28 @@ section h5,p,li {
 .main .case .content-title, .news .content-title {
   text-align: left;
 }
+.news .content-title{
+	padding-bottom:18px;
+}
 .main .case li a {
-  color: #333;
 }
 .main .case li a:hover{
   color: #d21229;
   text-decoration: underline;
   cursor: pointer;
 }
+
+.main .case .solution-more{
+	float:right;
+	color: #d21229;
+	margin-top:14px;
+	
+}
 .main .case-content{
   padding: 45px 0;
 }
 .main .case-content>li{
-  margin: 5px;
-  padding: 5px;
-  width: 270px;
+  width: 292px;
   float: left;
   overflow: hidden;
 }
@@ -100,6 +107,7 @@ section h5,p,li {
   bottom: 0;
   left: 0;
   right: 0;
+  width:273px;
   background-color: rgba(0,0,0,0.4);
   transition: all .3s;
   text-align: center;
@@ -123,8 +131,7 @@ section h5,p,li {
   text-align: center;
 }
 .main .case-content>li img {
-  width: 100%;
-  height: 160px;
+  height: 164px;
 }
 .main .case-content>li img:hover {
   transform: scale(1.02);
