--- a/css/productAreas.css
+++ b/css/productAreas.css
@@ -1,6 +1,7 @@
 .main .content1 {
   background: url(../img/banner1.jpg) left bottom;
   background-size: cover;
+  border-bottom:1px #ccc solid
 }
 
 .main .content1>div {
@@ -13,15 +14,13 @@
 }
 
 .main .content2{
-  padding-top: 250px;
-  /*height: 735px;*/
+  
 }
 .product-img{
   padding: 0 80px;
-  position: absolute;
-  /*background: #f4f4f4;*/
-  top: 385px;
-  right: 0px;
+  position: relative;
+  top: -65px;
+  text-align:center;
 }
 
 .content2 ul{
@@ -43,9 +42,6 @@
   color: #fff;
 }
 
-.product-title, .product-other-title{
-  padding: 100px 0;
-}
 
 .main .content-title {
   font-size: 36px;
