--- a/css/productEnterprise.css
+++ b/css/productEnterprise.css
@@ -1,7 +1,7 @@
 .main .content1 {
   background: url(../img/banner1.jpg) left bottom;
-  background-size: cover;
-}
+  background-size: cover;border-bottom:1px #ccc solid
+ }
 
 .main .content1>div {
   padding-top: 235px;
@@ -13,15 +13,14 @@
 }
 
 .main .content2{
-  padding-top: 250px;
-  /*height: 735px;*/
+   /*height: 735px;*/
 }
 .product-img{
   padding: 0 80px;
-  position: absolute;
-  /*background: #f4f4f4;*/
-  top: 435px;
-  right: 0px;
+  padding: 0 80px;
+  position: relative;
+  top: -65px;
+  text-align:center;
 }
 .content3 {
   height: 686px;
@@ -39,9 +38,7 @@
   color: #fff;
 }
 
-.product-title, .product-other-title{
-  padding: 100px 0;
-}
+
 
 .main .content-title {
   font-size: 36px;
