--- a/css/header.css
+++ b/css/header.css
@@ -15,11 +15,25 @@ nav:nth-child(1) {
 }
 
 
-.navbar-default:nth-child(1) .navbar-nav>li>a:hover {
-  color: #000;
+.btn-pink, .btn-pink:focus{
+  background: rgba(0,0,0,0);
+  border-color: rgba(255,255,255,0.2);
+  border-color: #ea042b;
+  color: #ea042b;
+  font-size: 15px;
+  outline: none;
 }
-.navbar-default:nth-child(2) .navbar-nav>li>a:hover {
-  color: #333;
+.btn-pink:hover{
+  background: #ea042b;
+  border-color: rgba(255,255,255,0.2);
+  color: #fff;
+}
+.navbar-index .btn-pink, .navbar:hover .btn-pink{
+  border-color: #fff;
+  color: #fff;
+}
+.navbar-index .btn-pink:hover, .navbar:hover .btn-pink:hover{
+  border-color: #ea042b;
 }
 
 .navbar-index .navbar-nav>li>a,.navbar-index .navbar-nav>li>a:focus{
@@ -101,15 +115,27 @@ nav:nth-child(1) {
   background-color: #202124;
   transition: all .4s;
 }
-.index-nav:hover .bg-nav {
+.navbar-fixed-top:hover .bg-nav {
   height: 500px;
 }
-.index-nav:hover>.container-fluid {
+.navbar-fixed-top:hover>.container-fluid {
   background: #202124;
   transition: background 0.5s;
 }
 
-.index-nav:hover .menu-text-wrap{
+.navbar-fixed-top:hover .menu-text-wrap{
   opacity: 1;
   height: 400px;
+}
+.navbar-fixed-top:hover .navbar-nav>li>a,.navbar-fixed-top:hover .navbar-nav>li>a:focus{
+  color: #fff;
+}
+.navbar-brand{
+  display: block;
+  width: 150px;
+  height: 50px;
+  background: url(../img/logo.png) no-repeat center center;
+}
+.navbar-index .navbar-brand,.navbar-fixed-top:hover .navbar-brand{
+  background-image: url(../img/logo1.png);
 }
