--- a/css/productSmb.css
+++ b/css/productSmb.css
@@ -97,7 +97,8 @@
   padding: 80px 0;
   text-align: center;
 }
-.content5 .content-title {
+.main .content5 .content-title {
+  font-size: 30px;
   padding: 35px 0;
 }
 
