--- a/css/solution.css
+++ b/css/solution.css
@@ -17,7 +17,7 @@
   padding: 0;
 }
 .main .content-nav, .main .content-con{
-  padding:40px 200px;
+  padding:40px 0;
 }
 .main .size {
   padding-bottom: 100px;
