--- a/css/reset.css
+++ b/css/reset.css
@@ -143,3 +143,14 @@ button{
 .btn-border-red:focus{
   color: #fff;
 }
+.back-to-top,.back-to-top:hover,.back-to-top:active:focus {
+  cursor: pointer;
+  position: fixed;
+  z-index: 999999;
+  bottom: 20px;
+  right: 20px;
+  display:none;
+  color: #555;
+  background-color: rgba(222,222,222,.75);
+  border-color: #ccc;
+}
