--- a/css/aboutIndex.css
+++ b/css/aboutIndex.css
@@ -3,15 +3,23 @@
   background-size: cover;
 }
 .content2 {
-  padding: 116px 185px;
+  padding: 10%;
 }
 .content2 div {
   margin: 0 auto;
 }
 .content2 p {
+  width: 85%;
   padding: 60px 0;
   /*line-height: 38px;*/
 }
+
+@media screen and (min-width:414px) and (max-width: 760px) {
+  .content2 p {
+    width: 100%;
+  }
+}
+
 .content3 .col-md-6 {
   padding: 60px;
 }
