--- a/css/aboutIndex.css
+++ b/css/aboutIndex.css
@@ -13,6 +13,15 @@
   padding: 60px 0;
   /*line-height: 38px;*/
 }
+.content3 .content-title{
+  color: #000;
+  font-size: 40px;
+}
+
+.content3 h5, p, li {
+  font-size: 25px;
+  color: #333;
+}
 
 @media screen and (min-width:414px) and (max-width: 760px) {
   .content2 p {
