--- a/css/panalog.css
+++ b/css/panalog.css
@@ -11,6 +11,7 @@
   padding: 50px 0;
 }
 .main .product-content-title, .main .product-content-subtitle {
+  font-size: 36px;
   margin-bottom: 30px;
   color: #fff;
 }
@@ -19,10 +20,7 @@
 }
 
 .main .content2{
-  padding: 0 270px;
-  padding-top: 250px;
-  padding-bottom: 100px;
-  /*height: 735px;*/
+  padding: 250px 13% 100px;
 }
 .product-computer{
   margin-top: -100px;
@@ -66,6 +64,7 @@
   /*height: 500px;*/
   background: url(../img/panalog-bg3.jpg);
   background-size: cover;
+  background-position-x: 41%;
 }
 .main .content5 h1 {
   color: #fff;
@@ -76,4 +75,14 @@
 }
 .main .content5 ul li {
   color: #fff;
+}
+
+@media screen and (min-width:414px) and (max-width: 1150px) {
+  .main .content5{
+    padding: 60px 150px;
+    background-position-y: -55px;
+  }
+  .main .content5 ul{
+    padding-top: 100%;
+  }
 }
