--- a/css/productNetcafe.css
+++ b/css/productNetcafe.css
@@ -2,3 +2,14 @@
   height: 750px;
   background:#532c85 url(../img/product-netcafe-bg1.jpg) no-repeat center center;
 }
+
+.content3{
+  background-position: center center;
+}
+.content4 {
+  background: #dcdffd;  
+}
+.content4 img{
+  width: 100%;
+  padding-bottom: 80px;
+}
