--- a/css/productIsp.css
+++ b/css/productIsp.css
@@ -28,12 +28,15 @@ border-bottom:1px #ccc solid}
   background: url(../img/productIsp-bg1.jpg) no-repeat;
   background-size: cover;
 }
-.content4 {
-  height: 800px;
-  background: #dcdffd url(../img/product-bg2.jpg) no-repeat;  
-}
-.content3, .content4 {
+.content3{
   background-position: center center;
+}
+.content4 {
+  background: #dcdffd;  
+}
+.content4 img{
+  width: 100%;
+  padding-bottom: 80px;
 }
 .content3 p {
   color: #fff;
@@ -52,20 +55,4 @@ border-bottom:1px #ccc solid}
   margin-top: 10px;
   text-align: center;
   color: red;
-}
-.main .client ul {
-  padding: 50px;
-}
-.main .client ul li {
-  text-align: center;
-  margin-bottom: 50px;
-  /*margin: 90px;*/
-}
-.main .client img{
-  width: 185px;
-  height: 65px;
-}
-  .main .client li:nth-child(2) img, .main .client li:nth-child(3) img{
-    width: 100px;
-  height: 65px;
 }
