--- a/css/aboutIndex.css
+++ b/css/aboutIndex.css
@@ -9,8 +9,8 @@
   margin: 0 auto;
 }
 .content2 p {
-  width: 85%;
-  padding: 60px 0;
+  width: 100%;
+  padding: 60px 3%;
   /*line-height: 38px;*/
 }
 .content3 .content-title{
