--- a/css/panabit.css
+++ b/css/panabit.css
@@ -192,16 +192,9 @@ img{
 }
 
 .main .news img {
-  margin-top: 15%;
+  margin-top: 20px;
   vertical-align:middle;
 }
-
-@media only screen and (max-width: 767px) {
-  .main .news img {
-    margin-top: 25%;
-  }
-}
-
 
 .nav-pills>li {
     border-radius: 4px;
