--- a/css/ixcache.css
+++ b/css/ixcache.css
@@ -116,3 +116,20 @@
     margin-top: 1%;
   }
 }
+
+@media only screen and (min-width:768px) and (max-width:1280px) {
+  .content4 ul li p {
+    font-size: 16px;
+  }
+}
+@media only screen and (max-width:768px) {
+  .main .content4 {
+    padding: 40px 50px;
+  }
+  .content4 ul li p {
+    line-height: 1.5;
+  }
+  .content4 .bottom-text-m {
+    margin-top: 20px;
+  }
+}
