--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+.nav-pills { padding: 0 20px; }
+
 /* main-common*/
 .outer-section {width:100%; float: left; clear: both;}
 .outer-wrapper {width:100%; max-width: 1440px; margin: 0 auto;}
@@ -77,14 +79,8 @@ section h5,p,li {
 	padding-bottom:18px;
 }
 
-@media screen and (min-width:414px) and (max-width: 760px) {
-  .case .content-title{
-    margin-bottom: 18px;
-  }
-  .main .news img {
-    widows: 100%;
-    margin-top: 25%;
-  }
+.case .content-title{
+  margin-bottom: 18px;
 }
 
 // @media screen and (max-width: 767px){
@@ -106,7 +102,7 @@ section h5,p,li {
 	
 }
 .main .case-content{
-  padding: 45px 0;
+  padding: 20px 0;
 }
 .main .case-content>li{
   text-align: center;
