--- a/css/productSmb.css
+++ b/css/productSmb.css
@@ -1,9 +1,13 @@
+.main .content2{
+  padding: 5%;
+}
 .product-img{
   
 }
 .content3 {
   height: 820px;
   background:#000f34 url(../img/product-smb7.jpg) center center no-repeat;
+  background-size: cover;
 }
 .content3 p {
   text-align: center;
@@ -12,9 +16,11 @@
   position: relative;
 }
 .content-buy .buy-content{
-  padding: 300px 80px 260px;
+  padding-top: 22%;
+  text-align: center;
 }
 .content-buy .buy-content img {
+  width: 90%;
   vertical-align: middle;
 }
 .content-buy .buy-content:nth-child(1){
@@ -29,20 +35,22 @@
   margin-left: 0px;
 }
 .content-buy .buy-bottom{
+  margin-top: 40%;
   font-size: 36px;
   color: #fff;
   text-align: center;
   height: 80px;
   line-height: 80px;
 }
+
 .content-buy .buy-bottom .glyphicon {
   margin-right: 10px;
   vertical-align: middle;
 }
-.content-buy .buy-bottom:nth-child(1){
+.content-buy .buy-content:nth-child(1) .buy-bottom{
   background: #811919;
 }
-.content-buy .buy-bottom:nth-child(2){
+.content-buy .buy-content:nth-child(2) .buy-bottom{
   background: #1e2e70;
 }
 
@@ -93,7 +101,9 @@
   text-align: center;
   background: url(../img/buy-content-six.png) no-repeat center center;
 }
-
+.content5 {
+  clear: both;
+}
 .content5 li{
   padding: 80px 0;
   text-align: center;
@@ -109,4 +119,16 @@
 .content5 .content-text{
   padding: 80px;
   text-align: left;
+}
+
+@media (max-width: 1280px) {
+  .content-buy .buy-content{
+    padding-top: 33%;
+  }
+  .content-buy .buy-bottom{
+    margin-top: 60%;
+  }
+  .content-buy-info{
+    top: 460px;
+  }
 }
