修改图片排版

--- a/css/productSmb.css
+++ b/css/productSmb.css
@@ -112,9 +112,11 @@
   font-size: 30px;
   padding: 35px 0;
 }
-
-.content5 li img{
-  width: 30%;
+.content5 .img-row {
+  margin-top: 25px;
+}
+.content5 .img-row img{
+  width: 200px;
 }
 .content5 .content-text{
   padding: 80px;
@@ -130,5 +132,11 @@
   }
   .content-buy-info{
     top: 460px;
+  }
+  .content5 .img-row img{
+    width: 130px;
+  }
+  .content5 .img-row {
+    margin-top: 50px;
   }
 }
